--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "CloudComputing-HW3-cicd",
+  "name": "counter-app",
   "version": "0.1.0",
   "private": true,
   "engines": {
     "node": "11.10.0",
     "npm": "6.7.0"
   },
-  "homepage": "https://github.com/songjytx/CloudComputing-HW3-cicd",
+  "homepage": "https://arnab-datta.github.io/counter-app",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
